# imca_report_table

./: .gitignore  AGENTS.md  README.md  pyproject.toml
imca_report_table/: __init__.py  __main__.py  models.py  traversal.py  utils.py
imca_report_table/render/: console.py  html.py
imca_report_table/templates/: report.html.j2
tests/: test_cli.py  test_traversal.py
